fixed dropdown visibility when hovering hidden

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -325,24 +325,26 @@ nav {
             text-decoration: none;
             color: inherit;
         }
-        .dropdown-items {
+    }
+    .dropdown-menu:hover > .dropdown-items,
+    .dropdown-menu > .dropdown-items:hover {
+            visibility: visible;
             height: 198px;
             transition: height .2s ease-in-out;
-        }
-        .dropdown-items>li {
-            opacity: 1;
-            transition: opacity .2s ease-in-out;
-        }
-        .dropdown-toggle:after {
-            content: "\0025B4";
-            position: absolute;
-            opacity: 0.75;
-            font-size: 1.6em;
-            line-height: 0.8;
-            margin-left: 0.2em;
-            transform: scale(1.25, 0.8);
-        }
+            > li {
+                opacity: 1;
+                transition: opacity .2s ease-in-out;    
+            }
     }
+    .dropdown-menu:hover > .dropdown-toggle:after {
+        content: "\0025B4";
+        position: absolute;
+        opacity: 0.75;
+        font-size: 1.6em;
+        line-height: 0.8;
+        margin-left: 0.2em;
+        transform: scale(1.25, 0.8);
+    }    
     .dropdown-toggle:after {
         content: "\0025BE";
         position: absolute;
@@ -354,6 +356,7 @@ nav {
     }
     .dropdown-items {
         position: absolute;
+        visibility: hidden;
         display: flex;
         height: 0;
         transition: height .2s ease-in-out;
